// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Observable Test Mapping topics to dispatched actions Observable map dispatchs cxengage/interactions/voice/mute-acknowledged to redux 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "response": undefined,
        "type": "cxengage/interactions/voice/mute-acknowledged",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Observable Test Mapping topics to dispatched actions Observable map dispatchs cxengage/interactions/voice/silent-monitor-end to redux 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "response": undefined,
        "type": "cxengage/interactions/voice/silent-monitor-end",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Observable Test Mapping topics to dispatched actions Observable map dispatchs cxengage/interactions/voice/silent-monitor-start to redux 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "response": undefined,
        "type": "cxengage/interactions/voice/silent-monitor-start",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Observable Test Mapping topics to dispatched actions Observable map dispatchs cxengage/interactions/voice/unmute-acknowledged to redux 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "response": undefined,
        "type": "cxengage/interactions/voice/unmute-acknowledged",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Observable Test Mapping topics to dispatched actions Observable map dispatchs cxengage/session/sqs-shut-down to redux 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "response": undefined,
        "type": "cxengage/session/sqs-shut-down",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Observable Test Mapping topics to dispatched actions Observable map dispatchs cxengage/session/started to redux 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "response": undefined,
        "type": "cxengage/session/started",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Observable Test Mapping topics to dispatched actions Observable map dispatchs cxengage/twilio/device-ready to redux 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "response": undefined,
        "type": "cxengage/twilio/device-ready",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Observable Test Mapping topics to dispatched actions can call monitorCall action through observable 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "defaultExtensionProvider": undefined,
        "interactionId": "mockId",
        "transitionCall": undefined,
        "type": "REQUESTING_MONITOR_CALL",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
